added user management apis
